[workspace]
resolver = "2"
members = ["deploy", "logic", "shared"]

[workspace.dependencies]
# at the time of writing these are private. you wont be able to build so just comment them out
# only the `deploy` member package will be affected
ensko_aws = { path = "../ensko_aws" }
ensko = { path = "../ensko/ensko" }

# these are needed, and are public
serde_json = "1.0.68"
serde = { version = "1.0.140", features = ["derive"] }
aws-config = "1.6.2"
aws-sdk-dynamodb = "1.74.0"
tokio = { version = "1.0", features = ["full"] }
fastrand = "2.3.0"
